[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/palladium/core/player.gd" type="Script" id=1]
[ext_resource path="res://addons/palladium/core/character_nodes.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
resource_local_to_scene = true
margin = 0.06
radius = 0.3
height = 0.794434

[sub_resource type="CapsuleShape" id=2]
resource_local_to_scene = true
margin = 0.06
radius = 0.5
height = 1.2

[sub_resource type="BoxShape" id=3]
resource_local_to_scene = true
extents = Vector3( 0.16, 0.04, 0.16 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation_Helper:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.52, 0 ), Vector3( 0, 0.52, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_CollisionShape:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.1, 0 ), Vector3( 0, 0.6, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body_CollisionShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.2, 0.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpperBody_CollisionShape:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.5, 0 ), Vector3( 0, 0.75, 0 ) ]
}

[node name="player" type="KinematicBody" groups=[
"moving",
"party",
]]
collision_layer = 2048
collision_mask = 14343
script = ExtResource( 1 )

[node name="character_nodes" parent="." instance=ExtResource( 2 )]

[node name="Rotation_Helper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52, 0 )

[node name="Camera" type="Spatial" parent="Rotation_Helper"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.6, 0 )

[node name="UpperBody_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="Body_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.1, 0 )
shape = SubResource( 2 )

[node name="Feet_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.04, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 4 )
